samples/_failures_safe/1761348793_868ff1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a8d068ef.c: In function ‘topologicalSortUtil’:
./samples/SAFE/__tmp_a8d068ef.c:149:5: error: expected expression at end of input
  149 |     visited[vertex] =
      |     ^~~~~~~
./samples/SAFE/__tmp_a8d068ef.c:149:5: error: expected declaration or statement at end of input
